Add meta informations

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NYX technology</title>
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="NYX technology">
+    <meta name="description" content="Empresa especializada em soluções de TI para pessoas">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://nyx.tc/">
+    <meta property="og:title" content="NYX technology">
+    <meta property="og:description" content="Empresa especializada em soluções de TI para pessoas">
+    <meta property="og:image" content="https://nyx.tc/assets/nyx-technology-social-share.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://nyx.tc/">
+    <meta property="twitter:title" content="NYX technology">
+    <meta property="twitter:description" content="Empresa especializada em soluções de TI para pessoas">
+    <meta property="twitter:image" content="https://nyx.tc/assets/nyx-technology-social-share.png">
+
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/a11y-css-reset/combo.css" />
     <link rel="stylesheet" href="assets/app.css">
-    <link rel="stylesheet" href="assets/form.css">
 </head>
 <body>
     <header class="header">
