Atualiza os termos de serviço e privacidade do nyxtalk.

--- a/public/nyxtalk/politica-de-privacidade/index.html
+++ b/public/nyxtalk/politica-de-privacidade/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="../../favicon.ico">
     <title>Política de Privacidade - NyxTalk</title>
     <style>
       body {
@@ -84,6 +84,17 @@
         <li>Cookies e tecnologias similares quando aplicável</li>
       </ul>
 
+      <h3>2.3 Informações relacionadas ao WhatsApp:</h3>
+      <ul>
+        <li>Número de telefone do WhatsApp</li>
+        <li>Foto de perfil pública do WhatsApp (se disponível)</li>
+        <li>Nome de exibição do WhatsApp</li>
+        <li>Mensagens enviadas através do WhatsApp</li>
+        <li>Status de entrega e leitura das mensagens</li>
+        <li>Tempo de resposta e interação</li>
+        <li>Dados técnicos relacionados à conexão WhatsApp</li>
+      </ul>
+
       <h2>3. Base Legal para o Tratamento de Dados</h2>
       <p>De acordo com a LGPD, o tratamento de seus dados pessoais é realizado com base nas seguintes hipóteses legais:</p>
       <ul>
@@ -107,27 +118,55 @@
         <li>Cumprir obrigações legais e regulatórias</li>
       </ul>
 
-      <h2>5. Compartilhamento de Informações</h2>
+      <h2>5. Uso Específico de Dados do WhatsApp</h2>
+      <p>Ao interagir com o NyxTalk através do WhatsApp, você deve estar ciente de que:</p>
+      <ul>
+        <li>Seu número de telefone e mensagens enviadas através do WhatsApp são processados de acordo com esta política de privacidade e os termos do WhatsApp Business API.</li>
+        <li>As mensagens enviadas através do WhatsApp são transmitidas usando a criptografia do WhatsApp, mas uma vez recebidas pelo nosso sistema, são armazenadas em nossos servidores seguros de acordo com nossa política de retenção.</li>
+        <li>Só enviaremos mensagens de acordo com as políticas da Meta para WhatsApp Business, o que significa que podemos enviar:
+          <ul>
+            <li>Mensagens de resposta a consultas iniciadas por você dentro da janela de 24 horas</li>
+            <li>Mensagens de notificação para as quais você tenha optado especificamente por receber</li>
+            <li>Mensagens de serviço relacionadas à sua conta</li>
+          </ul>
+        </li>
+        <li>Não utilizaremos seu número de WhatsApp para marketing direto sem seu consentimento explícito.</li>
+        <li>Respeitamos os limites de taxa e outros requisitos técnicos impostos pela API do WhatsApp Business.</li>
+      </ul>
+
+      <h2>6. Relacionamento com a Meta e WhatsApp</h2>
+      <p>
+        O NyxTalk não é afiliado, associado, autorizado, endossado por, ou de qualquer forma oficialmente conectado com a Meta Platforms, Inc. ou WhatsApp Inc.
+      </p>
+      <p>
+        NyxTalk é um aplicativo de terceiros que utiliza a API do WhatsApp Business para facilitar a comunicação. As comunicações através do WhatsApp estão sujeitas aos Termos de Serviço e Política de Privacidade da Meta e do WhatsApp.
+      </p>
+
+      <h2>7. Compartilhamento de Informações</h2>
       <p>Podemos compartilhar suas informações pessoais com:</p>
       <ul>
         <li>Provedores de serviços que nos auxiliam na operação do NyxTalk</li>
         <li>Parceiros de negócios, conforme necessário para o fornecimento dos serviços</li>
         <li>Autoridades governamentais, quando exigido por lei ou processo legal</li>
         <li>Em caso de reorganização empresarial, fusão ou venda</li>
+        <li>Meta Platforms, Inc. e WhatsApp Inc., na medida necessária para facilitar a comunicação através da plataforma WhatsApp</li>
       </ul>
       <p>Não vendemos suas informações pessoais a terceiros. Qualquer compartilhamento de dados será realizado em conformidade com a LGPD e esta Política de Privacidade.</p>
 
-      <h2>6. Transferência Internacional de Dados</h2>
+      <h2>8. Transferência Internacional de Dados</h2>
       <p>
         Caso seja necessário transferir seus dados para fora do Brasil, garantiremos que tal transferência ocorra apenas para países ou organismos internacionais que proporcionem grau de proteção de dados adequado, ou mediante a adoção de garantias e salvaguardas, conforme exigido pela LGPD.
       </p>
+      <p>
+        Ao utilizar os serviços do WhatsApp Business API, alguns de seus dados podem ser processados em servidores internacionais operados pela Meta Platforms, Inc. Estes dados são tratados de acordo com as políticas de privacidade da Meta e as leis de proteção de dados aplicáveis.
+      </p>
 
-      <h2>7. Segurança de Dados</h2>
+      <h2>9. Segurança de Dados</h2>
       <p>
         Implementamos medidas técnicas e organizacionais apropriadas para proteger suas informações pessoais contra acesso não autorizado, alteração, divulgação ou destruição, em conformidade com as exigências da LGPD. No entanto, nenhum método de transmissão pela internet ou método de armazenamento eletrônico é 100% seguro.
       </p>
 
-      <h2>8. Seus Direitos como Titular de Dados</h2>
+      <h2>10. Seus Direitos como Titular de Dados</h2>
       <p>De acordo com a LGPD, você possui os seguintes direitos em relação aos seus dados pessoais:</p>
       <ul>
         <li>Confirmação da existência de tratamento de seus dados</li>
@@ -142,29 +181,41 @@
       </ul>
       <p>Para exercer qualquer um desses direitos, entre em contato conosco através do e-mail: <a href="mailto:admin@nyx.tc">admin@nyx.tc</a></p>
 
-      <h2>9. Retenção de Dados</h2>
+      <h2>11. Retenção de Dados</h2>
       <p>
         Mantemos suas informações pessoais pelo tempo necessário para os fins estabelecidos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei, em conformidade com os princípios da LGPD.
       </p>
+      <p>Para dados específicos do WhatsApp, seguimos as seguintes diretrizes de retenção:</p>
+      <ul>
+        <li>Histórico de conversas: retido por até 90 dias</li>
+        <li>Dados de usuários inativos: removidos após 12 meses de inatividade</li>
+        <li>Logs técnicos: retidos por até 60 dias</li>
+      </ul>
 
-      <h2>10. Crianças e Adolescentes</h2>
+      <h2>12. Crianças e Adolescentes</h2>
       <p>
-        Nossos serviços não são direcionados a menores de 13 anos. Em conformidade com a LGPD, o tratamento de dados pessoais de crianças e adolescentes será realizado em seu melhor interesse, mediante consentimento específico e em destaque dado por pelo menos um dos pais ou responsável legal, quando aplicável.
+        Nossos serviços não são direcionados a menores de 13 anos. Em conformidade com a LGPD e as políticas da Meta, o tratamento de dados pessoais de crianças e adolescentes será realizado em seu melhor interesse, mediante consentimento específico e em destaque dado por pelo menos um dos pais ou responsável legal, quando aplicável.
+      </p>
+      <p>
+        De acordo com os termos do WhatsApp, usuários devem ter pelo menos 13 anos de idade para utilizar o serviço.
       </p>
 
-      <h2>11. Alterações nesta Política</h2>
+      <h2>13. Alterações nesta Política</h2>
       <p>
         Podemos atualizar esta Política de Privacidade periodicamente. A versão mais recente estará sempre disponível em nosso site, com a data da última atualização. Recomendamos que você revise esta política regularmente.
       </p>
 
-      <h2>12. Encarregado de Proteção de Dados (DPO)</h2>
+      <h2>14. Encarregado de Proteção de Dados (DPO)</h2>
       <p>
         Para questões relacionadas especificamente à proteção de dados e à LGPD, você pode entrar em contato com nosso Encarregado de Proteção de Dados (DPO) através do email: <a href="mailto:admin@nyx.tc">admin@nyx.tc</a>
       </p>
 
-      <h2>13. Contato</h2>
+      <h2>15. Canais de Atendimento</h2>
       <p>
         Se você tiver dúvidas ou preocupações sobre esta Política de Privacidade ou nossas práticas de privacidade, entre em contato conosco pelo e-mail: <a href="mailto:admin@nyx.tc">admin@nyx.tc</a>
+      </p>
+      <p>
+        Você também pode entrar em contato conosco através do WhatsApp: [Seu número de WhatsApp comercial]
       </p>
 
       <hr>
