--- a/public/nyxtalk/termos-de-servico/index.html
+++ b/public/nyxtalk/termos-de-servico/index.html
@@ -69,35 +69,69 @@
         O NyxTalk é um chatbot desenvolvido para facilitar a comunicação e automação de atendimento para empresas. O Serviço inclui todas as funcionalidades, atualizações e novas versões que possam ser lançadas periodicamente.
       </p>
 
-      <h2>3. Cadastro e Conta</h2>
-      <h3>3.1 Requisitos de cadastro</h3>
+      <h2>3. Serviços do WhatsApp</h2>
+      <h3>3.1 Uso do WhatsApp Business API</h3>
+      <p>
+        O NyxTalk utiliza a API do WhatsApp Business para fornecer serviços através da plataforma WhatsApp. Ao utilizar nosso Serviço através do WhatsApp, você também está sujeito aos Termos de Serviço do WhatsApp e da Meta.
+      </p>
+
+      <h3>3.2 Limitações do WhatsApp</h3>
+      <p>O uso do NyxTalk através do WhatsApp está sujeito às seguintes limitações:</p>
+      <ul>
+        <li>Você só receberá mensagens proativas dentro das categorias permitidas pela Meta</li>
+        <li>O número de mensagens que podemos enviar está sujeito às limitações da API do WhatsApp Business</li>
+        <li>Certos tipos de conteúdo podem não ser suportados</li>
+        <li>O serviço depende da disponibilidade contínua da API do WhatsApp Business</li>
+      </ul>
+
+      <h3>3.3 Conformidade com Políticas da Meta</h3>
+      <p>Você concorda em não utilizar o Serviço para:</p>
+      <ul>
+        <li>Enviar spam ou mensagens não solicitadas</li>
+        <li>Distribuir conteúdo ilegal ou que viole os termos do WhatsApp</li>
+        <li>Coletar informações ou conteúdo de outros usuários do WhatsApp</li>
+        <li>Infringir direitos de propriedade intelectual</li>
+        <li>Realizar atividades que possam desativar, sobrecarregar ou prejudicar o funcionamento adequado dos serviços WhatsApp</li>
+      </ul>
+
+      <h2>4. Cadastro e Conta</h2>
+      <h3>4.1 Requisitos de cadastro</h3>
       <p>
         Para utilizar determinadas funcionalidades do Serviço, pode ser necessário criar uma conta. Você concorda em fornecer informações precisas, atuais e completas durante o processo de registro e em manter essas informações atualizadas.
       </p>
 
-      <h3>3.2 Responsabilidade pela conta</h3>
+      <h3>4.2 Responsabilidade pela conta</h3>
       <p>
         Você é responsável por manter a confidencialidade de suas credenciais de acesso e por todas as atividades que ocorrem em sua conta. Você concorda em notificar-nos imediatamente sobre qualquer uso não autorizado de sua conta ou qualquer outra violação de segurança.
       </p>
 
-      <h2>4. Proteção de Dados e Privacidade</h2>
-      <h3>4.1 Conformidade com a LGPD</h3>
+      <h2>5. Proteção de Dados e Privacidade</h2>
+      <h3>5.1 Conformidade com a LGPD</h3>
       <p>
         Nosso tratamento de dados pessoais está em conformidade com a Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018. Para informações detalhadas sobre como coletamos, utilizamos e protegemos seus dados pessoais, consulte nossa <a href="../politica-de-privacidade/">Política de Privacidade</a>.
       </p>
 
-      <h3>4.2 Consentimento</h3>
+      <h3>5.2 Dados do WhatsApp</h3>
+      <p>Ao utilizar nosso Serviço através do WhatsApp, você concorda que:</p>
+      <ul>
+        <li>Seu número de telefone e mensagens serão processados conforme descrito em nossa Política de Privacidade</li>
+        <li>Podemos armazenar o histórico de conversas para melhorar o serviço e para fins de registro</li>
+        <li>Podemos utilizar sistemas automatizados para processar suas mensagens e fornecer respostas</li>
+        <li>Você concorda em receber mensagens de resposta dentro da janela de 24 horas após sua última interação</li>
+      </ul>
+
+      <h3>5.3 Consentimento</h3>
       <p>
         Ao utilizar nosso Serviço, você consente com a coleta e o processamento de seus dados conforme descrito em nossa Política de Privacidade, respeitando os princípios e direitos estabelecidos pela LGPD.
       </p>
 
-      <h3>4.3 Direitos do titular de dados</h3>
+      <h3>5.4 Direitos do titular de dados</h3>
       <p>
         Você tem direitos específicos com relação aos seus dados pessoais, conforme estabelecido pela LGPD, incluindo o direito de acessar, corrigir, excluir dados e revogar o consentimento. Para exercer esses direitos, entre em contato conosco conforme indicado na seção "Contato" destes Termos.
       </p>
 
-      <h2>5. Uso Aceitável</h2>
-      <h3>5.1 Você concorda em não:</h3>
+      <h2>6. Uso Aceitável</h2>
+      <h3>6.1 Você concorda em não:</h3>
       <ul>
         <li>Utilizar o Serviço para qualquer finalidade ilegal ou não autorizada</li>
         <li>Violar quaisquer leis aplicáveis em sua jurisdição</li>
@@ -106,56 +140,62 @@
         <li>Tentar acessar, interferir ou danificar qualquer aspecto do Serviço ou seus servidores</li>
         <li>Utilizar o Serviço para enviar spam, conteúdo ofensivo ou prejudicial</li>
         <li>Reproduzir, duplicar, copiar, vender ou revender qualquer parte do Serviço</li>
+        <li>Tentar contornar as limitações técnicas ou políticas do WhatsApp Business API</li>
       </ul>
 
-      <h3>5.2 Monitoramento e fiscalização</h3>
+      <h3>6.2 Monitoramento e fiscalização</h3>
       <p>
         Reservamo-nos o direito, mas não a obrigação, de monitorar o uso do Serviço e tomar as medidas que julgarmos apropriadas caso identifiquemos violações destes termos.
       </p>
 
-      <h2>6. Conteúdo do Usuário</h2>
-      <h3>6.1 Propriedade</h3>
+      <h2>7. Conteúdo do Usuário</h2>
+      <h3>7.1 Propriedade</h3>
       <p>
         Você mantém todos os direitos sobre qualquer conteúdo que submeter, publicar ou exibir no Serviço.
       </p>
 
-      <h3>6.2 Licença</h3>
+      <h3>7.2 Licença</h3>
       <p>
         Ao submeter, publicar ou exibir conteúdo no Serviço, você nos concede uma licença mundial, não exclusiva, isenta de royalties, para usar, reproduzir, adaptar, publicar, traduzir e distribuir tal conteúdo em qualquer mídia, exclusivamente para a finalidade de permitir que o NyxTalk forneça, promova e melhore o Serviço.
       </p>
 
-      <h3>6.3 Responsabilidade pelo conteúdo</h3>
+      <h3>7.3 Responsabilidade pelo conteúdo</h3>
       <p>
         Você é o único responsável por todo o conteúdo que enviar e pelas consequências de compartilhá-lo.
       </p>
 
-      <h2>7. Propriedade Intelectual</h2>
-      <h3>7.1 Nossos Direitos</h3>
+      <h2>8. Propriedade Intelectual</h2>
+      <h3>8.1 Nossos Direitos</h3>
       <p>
         O Serviço e seu conteúdo original, recursos e funcionalidades são e permanecerão propriedade exclusiva da NyxTalk e seus licenciadores. O Serviço é protegido por direitos autorais, marcas registradas e outras leis.
       </p>
 
-      <h3>7.2 Sua Licença</h3>
+      <h3>8.2 Sua Licença</h3>
       <p>
         Sujeito ao cumprimento destes Termos, concedemos a você uma licença limitada, não exclusiva, não transferível e revogável para usar o Serviço para suas finalidades internas.
       </p>
 
-      <h2>8. Modificações do Serviço</h2>
+      <h3>8.3 Propriedade Intelectual de Terceiros</h3>
+      <p>
+        O NyxTalk não é afiliado, associado, autorizado, endossado por, ou de qualquer forma oficialmente conectado com a Meta Platforms, Inc. ou WhatsApp Inc. Todas as referências a "WhatsApp" e "Meta" são propriedade de seus respectivos proprietários.
+      </p>
+
+      <h2>9. Modificações do Serviço</h2>
       <p>
         Reservamo-nos o direito de modificar ou descontinuar, temporária ou permanentemente, o Serviço (ou qualquer parte dele) com ou sem aviso prévio. Não seremos responsáveis perante você ou terceiros por qualquer modificação, suspensão ou descontinuidade do Serviço.
       </p>
 
-      <h2>9. Rescisão</h2>
+      <h2>10. Rescisão</h2>
       <p>
         Podemos encerrar ou suspender seu acesso ao Serviço imediatamente, sem aviso prévio ou responsabilidade, por qualquer motivo, incluindo, sem limitação, se você violar os Termos. Após a rescisão, seu direito de usar o Serviço cessará imediatamente.
       </p>
 
-      <h2>10. Isenção de Garantias</h2>
+      <h2>11. Isenção de Garantias</h2>
       <p>
         O Serviço é fornecido "como está" e "conforme disponível", sem garantias de qualquer tipo, expressas ou implícitas. Não garantimos que o Serviço atenderá às suas necessidades específicas, será ininterrupto, oportuno, seguro ou livre de erros.
       </p>
 
-      <h2>11. Limitação de Responsabilidade</h2>
+      <h2>12. Limitação de Responsabilidade</h2>
       <p>
         Em nenhum caso a NyxTalk, seus diretores, funcionários, parceiros, agentes, fornecedores ou afiliados serão responsáveis por quaisquer danos indiretos, incidentais, especiais, consequenciais ou punitivos, incluindo, sem limitação, perda de lucros, dados, uso, boa vontade ou outras perdas intangíveis, resultantes de:
       </p>
@@ -164,19 +204,31 @@
         <li>Qualquer conduta ou conteúdo de terceiros no Serviço</li>
         <li>Conteúdo obtido através do Serviço</li>
         <li>Acesso não autorizado, uso ou alteração de suas transmissões ou conteúdo</li>
+        <li>Interrupções ou indisponibilidade do serviço do WhatsApp</li>
       </ul>
 
-      <h2>12. Lei Aplicável</h2>
+      <h2>13. Relacionamento com a Meta e WhatsApp</h2>
+      <p>
+        O NyxTalk utiliza a API do WhatsApp Business para fornecer seus serviços, mas não é afiliado à Meta Platforms, Inc. ou WhatsApp Inc. Você reconhece e concorda que:
+      </p>
+      <ul>
+        <li>Seu uso do WhatsApp está sujeito aos termos e políticas da Meta e do WhatsApp</li>
+        <li>A Meta pode limitar, modificar ou revogar o acesso do NyxTalk à API do WhatsApp Business</li>
+        <li>A Meta não é responsável por quaisquer problemas decorrentes do uso do NyxTalk</li>
+        <li>Você mantém seu relacionamento direto com o WhatsApp e a Meta, que é independente do seu relacionamento conosco</li>
+      </ul>
+
+      <h2>14. Lei Aplicável</h2>
       <p>
         Estes Termos serão regidos e interpretados de acordo com as leis do Brasil, incluindo a Lei Geral de Proteção de Dados Pessoais (LGPD) - Lei nº 13.709/2018, sem consideração aos seus princípios de conflito de leis.
       </p>
 
-      <h2>13. Alterações nos Termos</h2>
+      <h2>15. Alterações nos Termos</h2>
       <p>
         Reservamo-nos o direito, a nosso exclusivo critério, de modificar ou substituir estes Termos a qualquer momento. A versão mais atual estará sempre disponível em nosso site. É sua responsabilidade verificar periodicamente se há alterações nos Termos.
       </p>
 
-      <h2>14. Contato</h2>
+      <h2>16. Contato</h2>
       <p>
         Se você tiver alguma dúvida sobre estes Termos, entre em contato conosco pelo e-mail: <a href="mailto:admin@nyx.tc">admin@nyx.tc</a>
       </p>
